--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,7 +12,11 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+        bind:
+            $targetDirectory: '%avatars_directory%'
+    App\Service\FileUploader:
+        arguments:
+            $targetDirectory: '%avatars_directory%'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
